--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
           <a href="/" class="logo" lang="en"
@@ -62,11 +62,11 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Hero --------------------->
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="container hero__container">
           <h1 class="hero__title">
             Ефективні рішення для <br />
@@ -76,10 +76,10 @@
             Замовити послугу
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Особливості-->
-      <section class="properties section">
+      <!-- <section class="properties section">
         <div class="container properties__container">
           <h2 class="hiden-title visually-hidden">Особливості</h2>
           <ul class="properties__list list">
@@ -132,7 +132,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--Чим ми заямаємося-->
       <section class="work section">
@@ -171,7 +171,7 @@
       </section>
 
       <!-- Наша команда-->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container container-team">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -329,11 +329,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Наши кліенти -->
 
-      <section class="clients section">
+      <!-- <section class="clients section">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list list">
@@ -381,9 +381,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Modal -->
-      <div class="backdrop is-hidden" data-modal>
+      <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button class="btn-modal" type="button" data-modal-close>
             <svg class="close-icon" width="18px" height="18px">
@@ -464,11 +464,11 @@
             </div>
           </form>
         </div>
-      </div>
+      </div> -->
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-contacts">
           <a href="/" class="logo" lang="en"
@@ -552,7 +552,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
