--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </section> -->
 
       <!--Чим ми заямаємося-->
-      <section class="work section">
+      <!-- <section class="work section">
         <div class="container container-work">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list list">
@@ -168,7 +168,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Наша команда-->
       <!-- <section class="team section">
@@ -333,7 +333,7 @@
 
       <!-- Наши кліенти -->
 
-      <!-- <section class="clients section">
+      <section class="clients section">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list list">
@@ -381,7 +381,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Modal -->
       <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
