--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </section> -->
 
       <!-- Особливості-->
-      <!-- <section class="properties section">
+      <section class="properties section">
         <div class="container properties__container">
           <h2 class="hiden-title visually-hidden">Особливості</h2>
           <ul class="properties__list list">
@@ -132,10 +132,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Чим ми заямаємося-->
-      <!-- <section class="work section">
+      <section class="work section">
         <div class="container container-work">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list list">
@@ -168,7 +168,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Наша команда-->
       <!-- <section class="team section">
