--- a/index.html
+++ b/index.html
@@ -406,11 +406,36 @@
             <use href="./images/icons.svg#icon-close-mobile"></use>
           </svg>
         </button>
+        <!-- ---------MOBILE MENU----------------------- -->
 
         <ul class="mobile-menu">
           <li><a href="" class="link">Студія</a></li>
           <li><a href="" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
+        </ul>
+
+        <ul class="mobile-menu-contacts">
+          <li class="mobile-menu-item">
+            <a href="" class="mobile-menu-link">+38 096 111 11 11</a>
+          </li>
+          <li class="mobile-menu-item">
+            <a href="" class="mobile-menu-link">info@devstudio.com</a>
+          </li>
+        </ul>
+
+        <ul class="mobile-menu__sochial">
+          <li class="mobile-menu__sochial-item">
+            <a href="" class="mobile-menu__sochial-link">Instagram</a>
+          </li>
+          <li class="mobile-menu__sochial-item">
+            <a href="" class="mobile-menu__sochial-link">Facebook</a>
+          </li>
+          <li class="mobile-menu__sochial-item">
+            <a href="" class="mobile-menu__sochial-link">Twitter</a>
+          </li>
+          <li class="mobile-menu__sochial-item">
+            <a href="" class="mobile-menu__sochial-link">Linkedln</a>
+          </li>
         </ul>
       </div>
 
