--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
           <a href="/" class="logo" lang="en"
@@ -71,15 +71,15 @@
           </svg>
         </button>
       </div>
-    </header>
+    </header> -->
 
-    <div class="container">
+    <!-- <div class="container">
       <ul class="menu">
         <li><a href="" class="link">Студія</a></li>
         <li><a href="" class="link">Портфоліо</a></li>
         <li><a href="" class="link">Контакти</a></li>
       </ul>
-    </div>
+    </div> -->
 
     <main>
       <!-- Hero --------------------->
@@ -188,7 +188,7 @@
       </section> -->
 
       <!-- Наша команда-->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container container-team">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -346,11 +346,12 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
+      -->
 
       <!-- Наши кліенти -->
 
-      <section class="clients section">
+      <!-- <section class="clients section">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list list">
@@ -398,7 +399,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Modal -->
       <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="menu-toggle js-close-menu">
