--- a/index.html
+++ b/index.html
@@ -193,7 +193,22 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item">
-              <img src="images/4853.jpg" alt="Ігор Дем'яненко" width="270" />
+              <img
+                class="team__img"
+                srcset="
+                  ./images/team/img-1_sm@1x.jpg 450w,
+                  ./images/team/img-1_sm@2x.jpg 900w,
+                  ./images/team/img-1_md@1x.jpg 354w,
+                  ./images/team/img-1_md@2x.jpg 708w,
+                  ./images/team/img-1_lg@1x.jpg 270w,
+                  ./images/team/img-1_lg@1x.jpg 540w
+                "
+                src="./images/team/img-1_sm@1x.jpg"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                alt="Ігор Дем'яненко"
+                width="450"
+                height="460"
+              />
 
               <div class="team__details">
                 <h3 class="team__name">Ігор Дем'яненко</h3>
@@ -231,7 +246,22 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="images/5844.jpg" alt="Ольга Рєпіна" width="270" />
+              <img
+                class="team__img"
+                src="./images/team/img-2_sm@1x.jpg"
+                srcset="
+                  ./images/team/img-2_sm@1x.jpg 450w,
+                  ./images/team/img-2_sm@2x.jpg 900w,
+                  ./images/team/img-2_md@1x.jpg 354w,
+                  ./images/team/img-2_md@2x.jpg 708w,
+                  ./images/team/img-2_lg@1x.jpg 270w,
+                  ./images/team/img-2_lg@1x.jpg 540w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                alt="Ольга Рєпіна"
+                width="450px"
+                height="460px"
+              />
 
               <div class="team__details">
                 <h3 class="team__name">Ольга Рєпіна</h3>
@@ -269,7 +299,22 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="images/16166.jpg" alt="Микола Тарасов" width="270" />
+              <img
+                class="team__img"
+                src="./images/team/img-3_sm@1x.jpg"
+                srcset="
+                  ./images/team/img-3_sm@1x.jpg 450w,
+                  ./images/team/img-3_sm@2x.jpg 900w,
+                  ./images/team/img-3_md@1x.jpg 354w,
+                  ./images/team/img-3_md@2x.jpg 708w,
+                  ./images/team/img-3_lg@1x.jpg 270w,
+                  ./images/team/img-3_lg@1x.jpg 540w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                alt="Микола Тарасов"
+                width="450"
+                height="460px"
+              />
 
               <div class="team__details">
                 <h3 class="team__name">Микола Тарасов</h3>
@@ -307,7 +352,22 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="images/2968.jpg" alt="Михайло Єрмаков" width="270" />
+              <img
+                class="team-img"
+                src="./images/team/img-3_sm@1x.jpg"
+                srcset="
+                  ./images/team/img-4_sm@1x.jpg 450w,
+                  ./images/team/img-4_sm@2x.jpg 900w,
+                  ./images/team/img-4_md@1x.jpg 354w,
+                  ./images/team/img-4_md@2x.jpg 708w,
+                  ./images/team/img-4_lg@1x.jpg 270w,
+                  ./images/team/img-4_lg@1x.jpg 540w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                alt="Михайло Єрмаков"
+                width="450px"
+                height="460px"
+              />
 
               <div class="team__details">
                 <h3 class="team__name">Михайло Єрмаков</h3>
@@ -347,7 +407,6 @@
           </ul>
         </div>
       </section>
-      -->
 
       <!-- Наши кліенти -->
 
