--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </section> -->
 
       <!-- Наша команда-->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container container-team">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -406,7 +406,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Наши кліенти -->
 
@@ -460,15 +460,15 @@
         </div>
       </section> -->
       <!-- Modal -->
-      <div class="menu-container js-menu-container" id="mobile-menu">
+      <!-- <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="menu-toggle js-close-menu">
           <svg class="menu-icon-close" width="40" height="40">
             <use href="./images/icons.svg#icon-close-mobile"></use>
           </svg>
-        </button>
-        <!-- ---------MOBILE MENU----------------------- -->
+        </button> -->
+      <!-- ---------MOBILE MENU----------------------- -->
 
-        <ul class="mobile-menu">
+      <!-- <ul class="mobile-menu">
           <li><a href="" class="link">Студія</a></li>
           <li><a href="" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
@@ -497,7 +497,7 @@
             <a href="" class="mobile-menu__sochial-link">Linkedln</a>
           </li>
         </ul>
-      </div>
+      </div> -->
 
       <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
@@ -584,7 +584,7 @@
     </main>
 
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer section">
       <div class="container footer-container">
         <div class="footer-contacts">
           <a href="/" class="logo" lang="en"
@@ -668,7 +668,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
+
     <script src="./js/modal.js"></script>
     <script
       defer
