--- a/index.html
+++ b/index.html
@@ -587,27 +587,33 @@
     <footer class="footer section">
       <div class="container footer-container">
         <div class="footer-contacts">
-          <a href="/" class="logo" lang="en"
+          <a href="/" class="footer-logo" lang="en"
             >Wed<span class="footer-logopart">studio</span></a
           >
 
           <address class="address">
             <ul class="address-list list">
-              <li>
+              <li class="address-item">
                 <a
+                  class="address-link address-city"
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
-                  class="contacts city"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li>
-                <a href="mailto:info@devstudio.com" class="contacts connect"
+              <li class="address-item">
+                <a
+                  class="address-link"
+                  href="mailto:info@devstudio.com"
+                  class="contacts connect"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
-                <a href="tel:+380961111111" class="contacts connect"
+              <li class="address-item">
+                <a
+                  class="address-link"
+                  href="tel:+380961111111"
+                  class="contacts connect"
                   >+38 096 111 11 11</a
                 >
               </li>
