--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- Header -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
           <a href="/" class="logo" lang="en"
@@ -71,7 +71,7 @@
           </svg>
         </button>
       </div>
-    </header> -->
+    </header>
 
     <!-- <div class="container">
       <ul class="menu">
@@ -83,7 +83,7 @@
 
     <main>
       <!-- Hero --------------------->
-      <!-- <section class="hero section">
+      <section class="hero section">
         <div class="container hero__container">
           <h1 class="hero__title">
             Ефективні рішення для <br />
@@ -93,10 +93,10 @@
             Замовити послугу
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Особливості-->
-      <!-- <section class="properties section">
+      <section class="properties section">
         <div class="container properties__container">
           <h2 class="hiden-title visually-hidden">Особливості</h2>
           <ul class="properties__list list">
@@ -149,10 +149,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Чим ми заямаємося-->
-      <!-- <section class="work section">
+      <section class="work section">
         <div class="container container-work">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list list">
@@ -185,10 +185,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Наша команда-->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container container-team">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -406,11 +406,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Наши кліенти -->
 
-      <!-- <section class="clients section">
+      <section class="clients section">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list list">
@@ -458,17 +458,17 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Modal -->
-      <!-- <div class="menu-container js-menu-container" id="mobile-menu">
+      <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="menu-toggle js-close-menu">
           <svg class="menu-icon-close" width="40" height="40">
             <use href="./images/icons.svg#icon-close-mobile"></use>
           </svg>
-        </button> -->
-      <!-- ---------MOBILE MENU----------------------- -->
+        </button>
+        <!-- ---------MOBILE MENU----------------------- -->
 
-      <!-- <ul class="mobile-menu">
+        <ul class="mobile-menu">
           <li><a href="" class="link">Студія</a></li>
           <li><a href="" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
@@ -497,9 +497,9 @@
             <a href="" class="mobile-menu__sochial-link">Linkedln</a>
           </li>
         </ul>
-      </div> -->
+      </div>
 
-      <!-- <div class="backdrop is-hidden" data-modal>
+      <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button class="btn-modal" type="button" data-modal-close>
             <svg class="close-icon" width="18px" height="18px">
@@ -580,7 +580,8 @@
             </div>
           </form>
         </div>
-      </div> -->
+      </div>
+      -->
     </main>
 
     <!-- Footer -->
