Added mobile-menu-contacts class

--- a/index.html
+++ b/index.html
@@ -461,17 +461,23 @@
         <!-- ---------MOBILE MENU----------------------- -->
 
         <ul class="mobile-menu">
-          <li><a href="" class="link">Студія</a></li>
-          <li><a href="" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li class="mobile-menu__item">
+            <a href="" class="mobile-menu__link">Студія</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="" class="mobile-menu__link">Портфоліо</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="" class="mobile-menu__link">Контакти</a>
+          </li>
         </ul>
 
-        <ul class="mobile-menu-contacts">
-          <li class="mobile-menu-item">
-            <a href="" class="mobile-menu-link">+38 096 111 11 11</a>
+        <ul class="mobile-menu__contacts">
+          <li class="mobile-menu__contacts-item">
+            <a href="" class="mobile-menu__contacts-link">+38 096 111 11 11</a>
           </li>
-          <li class="mobile-menu-item">
-            <a href="" class="mobile-menu-link">info@devstudio.com</a>
+          <li class="mobile-menu__contacts-item">
+            <a href="" class="mobile-menu__contacts-link">info@devstudio.com</a>
           </li>
         </ul>
 
@@ -573,7 +579,6 @@
           </form>
         </div>
       </div>
-      -->
     </main>
 
     <!-- Footer -->
