--- a/index.html
+++ b/index.html
@@ -462,7 +462,9 @@
 
         <ul class="mobile-menu">
           <li class="mobile-menu__item">
-            <a href="" class="mobile-menu__link">Студія</a>
+            <a href="" class="mobile-menu__link mobile-menu__link-current"
+              >Студія</a
+            >
           </li>
           <li class="mobile-menu__item">
             <a href="" class="mobile-menu__link">Портфоліо</a>
@@ -472,16 +474,18 @@
           </li>
         </ul>
 
-        <ul class="mobile-menu__contacts">
+        <ul class="mobile-menu__contacts list">
           <li class="mobile-menu__contacts-item">
-            <a href="" class="mobile-menu__contacts-link">+38 096 111 11 11</a>
+            <a href="" class="mobile-menu__contacts-link link-current"
+              >+38 096 111 11 11</a
+            >
           </li>
           <li class="mobile-menu__contacts-item">
             <a href="" class="mobile-menu__contacts-link">info@devstudio.com</a>
           </li>
         </ul>
 
-        <ul class="mobile-menu__sochial">
+        <ul class="mobile-menu__sochial list">
           <li class="mobile-menu__sochial-item">
             <a href="" class="mobile-menu__sochial-link">Instagram</a>
           </li>
