--- a/index.html
+++ b/index.html
@@ -150,7 +150,12 @@
           <ul class="work__list list">
             <li class="work__item">
               <img
-                src="images/programmer-working-his-desk.jpg"
+                srcset="
+                  ./images/work/img-1_sm@1x.jpg 370w,
+                  ./images/work/img-1_sm@2x.jpg 740x
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/work/img-1_sm@1x.jpg"
                 alt="programmer"
                 width="370"
                 height="294"
@@ -159,7 +164,12 @@
             </li>
             <li class="work__item">
               <img
-                src="images/web-ui-designers.jpg"
+                srcset="
+                  ./images/work/img-2_sm@1x.jpg 370w,
+                  ./images/work/img-2_sm@2x.jpg 740x
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/work/img-2_sm@1x.jpg"
                 alt="web ui designers"
                 width="370"
                 height="294"
@@ -168,7 +178,12 @@
             </li>
             <li class="work__item">
               <img
-                src="images/creative-artist.jpg"
+                srcset="
+                  ./images/work/img-3_sm@1x.jpg 370w,
+                  ./images/work/img-3_sm@2x.jpg 740x
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/work/img-3_sm@1x.jpg"
                 alt="creative artist"
                 width="370"
                 height="294"
